--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -32,19 +32,23 @@ affordable interactive online private tutoring.{{end}}
                     <img class="first-slide" src="https://dzuyel7n94hma.cloudfront.net/accelerator/img/saas-starter-kit-banner-01.png" style="width:100%;min-height: 500px" alt="First slide">
                     <div class="container">
                         <div class="carousel-caption text-center call-out mt-sm-5">
-                            <h1 class="d-sm-node">Experience the Power of Technology in Education</h1>
-                            <p class="d-sm-node">Imagine the serenity, convenience and the satisfaction your child will derive
+                            <div class="d-sm-none">
+                                <h1>Experience the Power of Technology in Education</h1>
+                                <p>Imagine the serenity, convenience and the satisfaction your child will derive
                                 from learning at his/her pace in the comfort of your house. 
                                 The world has
                                 become a global village and your child may not need to be confined within the
                                 four walls of a school building anymore in order to learn. Remoteschool.com.ng has
                                 got the answer.</p>
-                                <h2 class="d-sm-node">100% Remote online tutoring website</h2>
-                                <p class="d-sm-node">
+                            </div>
+                            <div class="d-sm-none">
+                                <h2>100% Remote online tutoring website</h2>
+                                <p>
                                     We bring this technology to your doorstep. Your child does not need the presence of a home  teacher to learn.<br/>
                                     Out platform provides a 100% remote learning environment that gives the same 
                                     interactive experience available in a physical class.
                                 </p>
+                            </div>
                             <div>
                                 <h2>Better Grades Guaranteed.</h2>
                                 <p>Our online tutors are ready to help you round the clock.</p>
