--- a/cmd/web-app/templates/content/site-index.gohtml
+++ b/cmd/web-app/templates/content/site-index.gohtml
@@ -50,8 +50,8 @@ affordable interactive online private tutoring.{{end}}
                                 </p>
                             </div>
                             <div>
-                                <h2>Better Grades Guaranteed.</h2>
-                                <p>Our online tutors are ready to help you round the clock.</p>
+                                <h2 class="d-none d-md-block">Better Grades Guaranteed.</h2>
+                                <p>Enjoy world-class tutoring from the comfort of your home.</p>
                                 <form method="post" action="signup">
                                     <div class="form-row">
                                         <div class="col-md-4 col-sm-12 mt-3">
