--- a/cmd/web-app/templates/partials/app-sidebar.tmpl
+++ b/cmd/web-app/templates/partials/app-sidebar.tmpl
@@ -25,23 +25,6 @@
             <!-- Divider -->
             <hr class="sidebar-divider">
 
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Interface
-            </div>
-
-            <li class='nav-item {{block "subscriptionsActive" .}}{{end}}'>
-                <a class="nav-link" href="/subscriptions">
-                    <i class="fas fa-fw fa-layer-group"></i>
-                    <span>Subscriptions</span></a>
-            </li>
-
-            <li class="nav-item {{block "lessonsActive" .}}{{end}}">
-                <a class="nav-link" href="/lessons">
-                    <i class="fas fa-fw fa-layer-group"></i>
-                    <span>Lessons</span></a>
-            </li>
-
             {{ if HasRole $._Ctx "admin" }}
             <!-- Nav Item - Utilities Collapse Menu -->
             <li class="nav-item {{block "usersActive" .}}{{end}}">
@@ -52,7 +35,7 @@
                 <div id="navSectionUsers" class="collapse" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="/users">Manage Users</a>
-                        <a class="collapse-item" href="/users/invite">Invite Users</a>
+                        <a class="collapse-item" href="/admin/students">Students</a>
                     </div> 
                 </div>
             </li>
@@ -66,7 +49,24 @@
                     <i class="fas fa-fw fa-layer-group"></i>
                     <span>Periods</span></a>
             </li>
+            <li class='nav-item {{block "adminSubscriptionsActive" .}}{{end}}'>
+                <a class="nav-link" href="/admin/subscriptions">
+                    <i class="fas fa-fw fa-layer-group"></i>
+                    <span>Subscriptions</span></a>
+            </li>
             {{end}}
+
+            <li class='nav-item {{block "subscriptionsActive" .}}{{end}}'>
+                <a class="nav-link" href="/subscriptions">
+                    <i class="fas fa-fw fa-layer-group"></i>
+                    <span>My Subscriptions</span></a>
+            </li>
+
+            <li class="nav-item {{block "lessonsActive" .}}{{end}}">
+                <a class="nav-link" href="/lessons">
+                    <i class="fas fa-fw fa-layer-group"></i>
+                    <span>Lessons</span></a>
+            </li>
 
         {{ end }}
 
